# ESP32-WeatherStation-2

./: CMakeLists.txt  README.FIRST.md  README.TESTING.md  README.VERSIONING.md  copilot.context.json  platformio.ini  vscode-extensions.txt
.github/: copilot-instructions.md
.history/: Doxyfile_20250822113257  Doxyfile_20250824154936  README.FIRST_20250822105512.md  README.FIRST_20250822110621.md  README.FIRST_20250822111025.md  README.FIRST_20250822111514.md  README.FIRST_20250822113632.md  README.FIRST_20250822113826.md  copilot.context_20250822132629.json
.history/prompts/: example.copilot_20250822113257.txt  example.copilot_20250824161558.txt  initial.copilot_20250822105714.txt
MyProgrammingSetup/: MyExtensions.txt  README.md  RunDocumentServer.sh
MyProgrammingSetup/DocumentServer/: md_server.py
include/: version.h
prompts/: boost.copilot.txt
scripts/: version_manager.py
src/: ESP32Metrics.c  main.c  version.c
test/: README.md
test/ESP32MetricsTest/: CMakeLists.txt  ESP32MetricsTest.c  README.md
